--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -21,6 +21,7 @@ openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
 openvidu.recording.custom-layout: /opt/openvidu/custom-layout
 openvidu.recording.autostop-timeout: 120
+openvidu.recording.composed-url:
 
 openvidu.streams.video.max-recv-bandwidth: 1000
 openvidu.streams.video.min-recv-bandwidth: 300
