--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -52,9 +52,11 @@ node('container') {
           sh '/usr/bin/kurento-media-server &> /kms.log &'
           sh 'cd openvidu/openvidu-server && mvn --batch-mode clean compile package'
           sh(script: '''#!/bin/bash
-            if "$OPENVIDU_RECORDING_VERSION" != "default"; then
-              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.recording.version=$OPENVIDU_RECORDING_VERSION openvidu-server-*.jar &> /openvidu-server.log &
+            if [ "$DOCKER_RECORDING_VERSION" != "default" ]; then
+              echo "Using custom openvidu-recording tag: $DOCKER_RECORDING_VERSION"
+              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.recording.version=$DOCKER_RECORDING_VERSION openvidu-server-*.jar &> /openvidu-server.log &
             else
+              echo "Using default openvidu-recording tag"
               cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true openvidu-server-*.jar &> /openvidu-server.log &
             fi
           '''.stripIndent())
