openvidu-browser: tsconfig.json file to root dir

--- a/openvidu-browser/tsconfig.json
+++ b/openvidu-browser/tsconfig.json
@@ -24,6 +24,7 @@
         "outDir": "../../lib",
         "preserveConstEnums": true,
         "removeComments": true,
+        "rootDir": "./src",
         "skipDefaultLibCheck": true,
         "skipLibCheck": true,
         "sourceMap": true,
