--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -1,48 +1,48 @@
 {
     "dependencies": {
-        "@angular/animations": "7.2.10", 
-        "@angular/cdk": "7.3.5", 
-        "@angular/common": "7.2.10", 
-        "@angular/compiler": "7.2.10", 
-        "@angular/core": "7.2.10", 
-        "@angular/flex-layout": "7.0.0-beta.24", 
-        "@angular/forms": "7.2.10", 
-        "@angular/http": "7.2.10", 
-        "@angular/material": "7.3.5", 
-        "@angular/platform-browser": "7.2.10", 
-        "@angular/platform-browser-dynamic": "7.2.10", 
-        "@angular/router": "7.2.10", 
-        "colormap": "2.3.0", 
-        "core-js": "2.6.5", 
-        "hammerjs": "2.0.8", 
-        "openvidu-browser": "2.9.0", 
-        "openvidu-node-client": "2.9.0", 
-        "rxjs": "6.4.0", 
-        "zone.js": "0.9.0"
-    }, 
+        "@angular/animations": "8.0.0",
+        "@angular/cdk": "8.0.0",
+        "@angular/common": "8.0.0",
+        "@angular/compiler": "8.0.0",
+        "@angular/core": "8.0.0",
+        "@angular/flex-layout": "8.0.0-beta.26",
+        "@angular/forms": "8.0.0",
+        "@angular/http": "7.2.15",
+        "@angular/material": "8.0.0",
+        "@angular/platform-browser": "8.0.0",
+        "@angular/platform-browser-dynamic": "8.0.0",
+        "@angular/router": "8.0.0",
+        "colormap": "2.3.1",
+        "core-js": "3.1.3",
+        "hammerjs": "2.0.8",
+        "openvidu-browser": "2.9.0",
+        "openvidu-node-client": "2.9.0",
+        "rxjs": "6.5.2",
+        "zone.js": "0.9.1"
+    },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.13.6", 
-        "@angular/cli": "7.3.6", 
-        "@angular/compiler-cli": "7.2.10", 
-        "@angular/language-service": "7.2.10", 
-        "@types/jasmine": "3.3.12", 
-        "@types/jasminewd2": "2.0.6", 
-        "@types/node": "11.11.7", 
-        "codelyzer": "5.0.0-beta.2", 
-        "ts-node": "8.0.3", 
-        "tslint": "5.14.0", 
-        "typescript": "3.2.4"
-    }, 
-    "license": "Apache-2.0", 
-    "name": "openvidu-testapp", 
-    "private": true, 
+        "@angular-devkit/build-angular": "0.800.0",
+        "@angular/cli": "8.0.0",
+        "@angular/compiler-cli": "8.0.0",
+        "@angular/language-service": "8.0.0",
+        "@types/jasmine": "3.3.13",
+        "@types/jasminewd2": "2.0.6",
+        "@types/node": "12.0.3",
+        "codelyzer": "5.0.1",
+        "ts-node": "8.2.0",
+        "tslint": "5.16.0",
+        "typescript": "3.4.5"
+    },
+    "license": "Apache-2.0",
+    "name": "openvidu-testapp",
+    "private": true,
     "scripts": {
-        "build": "ng build", 
-        "e2e": "ng e2e", 
-        "lint": "ng lint", 
-        "ng": "ng", 
-        "start": "ng serve", 
+        "build": "ng build",
+        "e2e": "ng e2e",
+        "lint": "ng lint",
+        "ng": "ng",
+        "start": "ng serve",
         "test": "ng test"
-    }, 
+    },
     "version": "2.9.0"
 }
