--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.openvidu</groupId>
 	<artifactId>openvidu-parent</artifactId>
-	<version>1.9.0-beta-1</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>OpenVidu</name>
