--- a/openvidu-test-browsers/pom.xml
+++ b/openvidu-test-browsers/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.9.0-beta-1</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-test-browsers</artifactId>
@@ -51,15 +51,9 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-
 		<!-- Encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Test dependencies version -->
-		<junit.jupiter.version>5.4.0</junit.jupiter.version>
-		<junit.platform.version>1.4.0</junit.platform.version>
-		<org-seleniumhq-selenium.version>3.141.59</org-seleniumhq-selenium.version>
 	</properties>
 
 	<dependencies>
@@ -71,17 +65,17 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 		</dependency>
 	</dependencies>
 
@@ -106,7 +100,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-source-plugin</artifactId>
-						<version>3.1.0</version>
+						<version>${version.source.plugin}</version>
 						<executions>
 							<execution>
 								<id>attach-sources</id>
@@ -119,7 +113,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.6</version>
+						<version>${version.gpg.plugin}</version>
 						<executions>
 							<execution>
 								<id>sign-artifacts</id>
@@ -133,7 +127,7 @@
 					<plugin>
 						<groupId>org.sonatype.plugins</groupId>
 						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.6.8</version>
+						<version>${version.nexus.staging.plugin}</version>
 						<extensions>true</extensions>
 						<configuration>
 							<serverId>ossrh</serverId>
