--- a/openvidu-test-e2e/pom.xml
+++ b/openvidu-test-e2e/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.9.0-beta-1</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-test-e2e</artifactId>
@@ -51,15 +51,9 @@
 		<java.version>1.8</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
-
 		<!-- Encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
-		<!-- Test dependencies version -->
-		<junit.jupiter.version>5.4.0</junit.jupiter.version>
-		<junit.platform.version>1.4.0</junit.platform.version>
-		<org-seleniumhq-selenium.version>3.141.59</org-seleniumhq-selenium.version>
 	</properties>
 
 	<build>
@@ -68,7 +62,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M3</version>
+					<version>${version.surefire.plugin}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -78,19 +72,19 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit.jupiter.version}</version>
+			<version>${version.junit.jupiter}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>selenium-jupiter</artifactId>
-			<version>3.1.0</version>
+			<version>${version.selenium.jupiter}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
-			<version>3.3.0</version>
+			<version>${version.webdrivermanager}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -98,43 +92,43 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-chrome-driver</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-firefox-driver</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-api</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-remote-driver</artifactId>
-			<version>${org-seleniumhq-selenium.version}</version>
+			<version>${version.selenium}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-runner</artifactId>
-			<version>${junit.platform.version}</version>
+			<version>${version.junit.platform}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit.jupiter.version}</version>
+			<version>${version.junit.jupiter}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -162,21 +156,21 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.mashape.unirest</groupId>
+			<artifactId>unirest-java</artifactId>
+			<version>1.4.9</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-test-browsers</artifactId>
-			<version>1.0.0</version>
+			<version>${version.openvidu.test.browsers}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-java-client</artifactId>
-			<version>2.10.0</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.mashape.unirest</groupId>
-			<artifactId>unirest-java</artifactId>
-			<version>1.4.9</version>
+			<version>${version.openvidu.java.client}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
