--- a/openvidu-test/pom.xml
+++ b/openvidu-test/pom.xml
@@ -1,11 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>io.openvidu</groupId>
 		<artifactId>openvidu-parent</artifactId>
-		<version>1.9.0-beta-1</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<artifactId>openvidu-test</artifactId>
@@ -33,12 +34,12 @@
 		<url>https://github.com/OpenVidu/openvidu</url>
 	</organization>
 
-    <scm>
-        <url>${openvidu.scm.url}</url>
-        <connection>scm:git:${openvidu.scm.connection}</connection>
-        <developerConnection>scm:git:${openvidu.scm.connection}</developerConnection>
-        <tag>develop</tag>
-    </scm>
+	<scm>
+		<url>${openvidu.scm.url}</url>
+		<connection>scm:git:${openvidu.scm.connection}</connection>
+		<developerConnection>scm:git:${openvidu.scm.connection}</developerConnection>
+		<tag>develop</tag>
+	</scm>
 
 	<developers>
 		<developer>
@@ -59,7 +60,7 @@
 		<dependency>
 			<groupId>io.openvidu</groupId>
 			<artifactId>openvidu-client</artifactId>
-			<version>1.1.0</version>
+			<version>${version.openvidu.client}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.kurento</groupId>
@@ -69,7 +70,7 @@
 		<dependency>
 			<groupId>org.kurento</groupId>
 			<artifactId>kurento-test</artifactId>
-			<version>6.7.1</version>
+			<version>${version.kurento}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.springframework.boot</groupId>
