openvidu-server: reset MediaPipeline latch on KurentoSession reset

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.address: 0.0.0.0
 server.ssl.enabled: true
 openvidu.recording.version: 2.9.0
 logging.level.root=info
+spring.main.allow-bean-definition-overriding: true
 
 
 
