openvidu-server: KmsManager refactoring. Kms toJson extended

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -29,7 +29,7 @@ openvidu.streams.video.min-recv-bandwidth: 300
 openvidu.streams.video.max-send-bandwidth: 1000
 openvidu.streams.video.min-send-bandwidth: 300
 
-kms.uris: ["ws://localhost:8888/kurento"]
+kms.uris: [\"ws://localhost:8888/kurento\"]
 
 coturn.redis.ip: 127.0.0.1
 coturn.redis.dbname: 0
