--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -15,6 +15,7 @@ server.ssl.key-alias: openvidu-selfsigned
 openvidu.secret: MY_SECRET
 openvidu.publicurl: local
 openvidu.cdr: false
+openvidu.cdr.path: log
 
 openvidu.recording: false
 openvidu.recording.path: /opt/openvidu/recordings
