--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -1,13 +1,16 @@
 node('container') {
+  stage('Containers clean up') {
+    sh 'docker rm -f chrome firefox e2e'
+  }
   docker.image('selenium/standalone-chrome:latest').pull()
   docker.image('selenium/standalone-firefox:latest').pull()
-  docker.image('selenium/standalone-chrome:latest').withRun('-p 4444:4444 --shm-size=1g -v /opt/openvidu:/opt/openvidu') { c ->
+  docker.image('selenium/standalone-chrome:latest').withRun('-p 4444:4444 --name chrome --shm-size=1g -v /opt/openvidu:/opt/openvidu') { c ->
     sh 'rm -rf /opt/openvidu/barcode.* && wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/barcode.y4m -P /opt/openvidu'
     sh 'rm -rf /opt/openvidu/fakeaudio.* && wget https://github.com/OpenVidu/openvidu/raw/master/openvidu-test-e2e/docker/fakeaudio.wav -P /opt/openvidu'
-    docker.image('selenium/standalone-firefox:latest').withRun('-p 4445:4444 --shm-size=1g') { d ->
+    docker.image('selenium/standalone-firefox:latest').withRun('-p 4445:4444 --name firefox --shm-size=1g') { d ->
       def mycontainer = docker.image('openvidu/openvidu-test-e2e:$DISTRO')
       mycontainer.pull()
-      mycontainer.inside("-p 4200:4200 -p 4443:4443 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu") {
+      mycontainer.inside("--name e2e -p 4200:4200 -p 4443:4443 -u root -e MY_UID=0 -v /var/run/docker.sock:/var/run/docker.sock:rw -v /dev/shm:/dev/shm -v /opt/openvidu:/opt/openvidu") {
         stage('Preparation') {
           sh 'rm -rf ~/.m2 || true'
           sh 'rm -rf openvidu || true'
