--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,23 +1,29 @@
 server.address: 0.0.0.0
 server.ssl.enabled: true
-openvidu.recording.version: 2.9.0
-logging.level.root: info
-spring.main.allow-bean-definition-overriding: true
-
-
-
 server.port: 4443
 server.ssl.key-store: classpath:openvidu-selfsigned.jks
 server.ssl.key-store-password: openvidu
 server.ssl.key-store-type: JKS
 server.ssl.key-alias: openvidu-selfsigned
 
-openvidu.secret: MY_SECRET
+logging.level.root: info
+spring.main.allow-bean-definition-overriding: true
+
+kms.uris: [\"ws://localhost:8888/kurento\"]
+
 openvidu.publicurl: local
+openvidu.secret: MY_SECRET
+
 openvidu.cdr: false
 openvidu.cdr.path: log
 
+openvidu.webhook: true
+openvidu.webhook.endpoint: https://localhost/openvidu-endpoint
+openvidu.webhook.headers: [\"Authorization:\ Basic\ T1BFTlZJRFVBUFA6TVlfU0VDUkVU\"]
+openvidu.webhook.events: [\"sessionCreated\",\"sessionDestroyed\",\"recordingStatusChanged\"]
+
 openvidu.recording: false
+openvidu.recording.version: 2.9.0
 openvidu.recording.path: /opt/openvidu/recordings
 openvidu.recording.public-access: false
 openvidu.recording.notification: publisher_moderator
@@ -29,8 +35,6 @@ openvidu.streams.video.max-recv-bandwidth: 1000
 openvidu.streams.video.min-recv-bandwidth: 300
 openvidu.streams.video.max-send-bandwidth: 1000
 openvidu.streams.video.min-send-bandwidth: 300
-
-kms.uris: [\"ws://localhost:8888/kurento\"]
 
 coturn.redis.ip: 127.0.0.1
 coturn.redis.dbname: 0
