openvidu-server: webhook

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -17,10 +17,10 @@ openvidu.secret: MY_SECRET
 openvidu.cdr: false
 openvidu.cdr.path: log
 
-openvidu.webhook: true
-openvidu.webhook.endpoint: https://localhost/openvidu-endpoint
-openvidu.webhook.headers: [\"Authorization:\ Basic\ T1BFTlZJRFVBUFA6TVlfU0VDUkVU\"]
-openvidu.webhook.events: [\"sessionCreated\",\"sessionDestroyed\",\"recordingStatusChanged\"]
+openvidu.webhook: false
+openvidu.webhook.endpoint:
+openvidu.webhook.headers:
+openvidu.webhook.events: [\"sessionCreated\",\"sessionDestroyed\",\"participantJoined\",\"participantLeft\",\"webrtcConnectionCreated\",\"webrtcConnectionDestroyed\",\"recordingStatusChanged\"]
 
 openvidu.recording: false
 openvidu.recording.version: 2.9.0
