openvidu-server: application.properties fix

--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -19,7 +19,7 @@ openvidu.cdr.path: log
 
 openvidu.webhook: false
 openvidu.webhook.endpoint:
-openvidu.webhook.headers:
+openvidu.webhook.headers: []
 openvidu.webhook.events: [\"sessionCreated\",\"sessionDestroyed\",\"participantJoined\",\"participantLeft\",\"webrtcConnectionCreated\",\"webrtcConnectionDestroyed\",\"recordingStatusChanged\"]
 
 openvidu.recording: false
