--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -1,42 +1,42 @@
-server.address: 0.0.0.0
-server.ssl.enabled: true
-server.port: 4443
-server.ssl.key-store: classpath:openvidu-selfsigned.jks
-server.ssl.key-store-password: openvidu
-server.ssl.key-store-type: JKS
-server.ssl.key-alias: openvidu-selfsigned
+server.address=0.0.0.0
+server.ssl.enabled=true
+server.port=4443
+server.ssl.key-store=classpath:openvidu-selfsigned.jks
+server.ssl.key-store-password=openvidu
+server.ssl.key-store-type=JKS
+server.ssl.key-alias=openvidu-selfsigned
 
-logging.level.root: info
-spring.main.allow-bean-definition-overriding: true
+logging.level.root=info
+spring.main.allow-bean-definition-overriding=true
 
-kms.uris: [\"ws://localhost:8888/kurento\"]
+kms.uris=["ws://localhost:8888/kurento"]
 
-openvidu.publicurl: local
-openvidu.secret: MY_SECRET
+openvidu.publicurl=local
+openvidu.secret=MY_SECRET
 
-openvidu.cdr: false
-openvidu.cdr.path: log
+openvidu.cdr=false
+openvidu.cdr.path=log
 
-openvidu.webhook: false
-openvidu.webhook.endpoint:
-openvidu.webhook.headers: []
-openvidu.webhook.events: [\"sessionCreated\",\"sessionDestroyed\",\"participantJoined\",\"participantLeft\",\"webrtcConnectionCreated\",\"webrtcConnectionDestroyed\",\"recordingStatusChanged\"]
+openvidu.webhook=false
+openvidu.webhook.endpoint=
+openvidu.webhook.headers=[]
+openvidu.webhook.events=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged"]
 
-openvidu.recording: false
-openvidu.recording.version: 2.9.0
-openvidu.recording.path: /opt/openvidu/recordings
-openvidu.recording.public-access: false
-openvidu.recording.notification: publisher_moderator
-openvidu.recording.custom-layout: /opt/openvidu/custom-layout
-openvidu.recording.autostop-timeout: 120
-openvidu.recording.composed-url:
+openvidu.recording=false
+openvidu.recording.version=2.9.0
+openvidu.recording.path=/opt/openvidu/recordings
+openvidu.recording.public-access=false
+openvidu.recording.notification=publisher_moderator
+openvidu.recording.custom-layout=/opt/openvidu/custom-layout
+openvidu.recording.autostop-timeout=120
+openvidu.recording.composed-url=
 
-openvidu.streams.video.max-recv-bandwidth: 1000
-openvidu.streams.video.min-recv-bandwidth: 300
-openvidu.streams.video.max-send-bandwidth: 1000
-openvidu.streams.video.min-send-bandwidth: 300
+openvidu.streams.video.max-recv-bandwidth=1000
+openvidu.streams.video.min-recv-bandwidth=300
+openvidu.streams.video.max-send-bandwidth=1000
+openvidu.streams.video.min-send-bandwidth=300
 
-coturn.redis.ip: 127.0.0.1
-coturn.redis.dbname: 0
-coturn.redis.password: turn
-coturn.redis.connect-timeout: 30
+coturn.redis.ip=127.0.0.1
+coturn.redis.dbname=0
+coturn.redis.password=turn
+coturn.redis.connect-timeout=30
