--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -11,14 +11,15 @@
     },
     "description": "OpenVidu Browser",
     "devDependencies": {
+        "autoprefixer": "9.6.1",
         "browserify": "16.3.0",
         "grunt": "1.0.4",
-        "grunt-autoprefixer": "3.0.4",
         "grunt-cli": "1.3.2",
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-sass": "1.0.0",
         "grunt-contrib-uglify": "4.0.1",
         "grunt-contrib-watch": "1.1.0",
+        "grunt-postcss": "0.9.0",
         "grunt-string-replace": "1.3.1",
         "grunt-ts": "6.0.0-beta.22",
         "tsify": "4.0.1",
