--- a/openvidu-node-client/package.json
+++ b/openvidu-node-client/package.json
@@ -6,14 +6,15 @@
     },
     "description": "OpenVidu Node Client",
     "devDependencies": {
+        "autoprefixer": "9.6.1",
         "@types/node": "12.6.8",
         "grunt": "1.0.4",
-        "grunt-autoprefixer": "3.0.4",
         "grunt-cli": "1.3.2",
         "grunt-contrib-copy": "1.0.0",
         "grunt-contrib-sass": "1.0.0",
         "grunt-contrib-uglify": "4.0.1",
         "grunt-contrib-watch": "1.1.0",
+        "grunt-postcss": "0.9.0",
         "grunt-string-replace": "1.3.1",
         "grunt-ts": "6.0.0-beta.22",
         "ts-node": "8.3.0",
