openvidu-server: dashboard folder structure refactoring. Static files ignored

--- a/openvidu-server/src/dashboard/package.json
+++ b/openvidu-server/src/dashboard/package.json
@@ -43,7 +43,8 @@
     "name": "frontend",
     "private": true,
     "scripts": {
-        "build": "ng build",
+        "build": "ng build --output-path ../main/resources/static",
+        "build-prod": "ng build --prod --output-path ../main/resources/static",
         "e2e": "ng e2e",
         "lint": "ng lint",
         "ng": "ng",
