--- a/openvidu-server/pom.xml
+++ b/openvidu-server/pom.xml
@@ -267,6 +267,11 @@
 			<artifactId>docker-java</artifactId>
 			<version>${version.dockerjava}</version>
 		</dependency>
+		<dependency>	
+			<groupId>org.codehaus.janino</groupId>	
+			<artifactId>janino</artifactId>	
+			<version>${version.janino}</version>	
+		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
