--- a/openvidu-server/src/main/resources/application.properties
+++ b/openvidu-server/src/main/resources/application.properties
@@ -20,7 +20,7 @@ openvidu.cdr.path=log
 openvidu.webhook=false
 openvidu.webhook.endpoint=
 openvidu.webhook.headers=[]
-openvidu.webhook.events=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged"]
+openvidu.webhook.events=["sessionCreated","sessionDestroyed","participantJoined","participantLeft","webrtcConnectionCreated","webrtcConnectionDestroyed","recordingStatusChanged","filterEventDispatched"]
 
 openvidu.recording=false
 openvidu.recording.version=2.9.0
