--- a/openvidu-test-e2e/jenkins/Jenkinsfile
+++ b/openvidu-test-e2e/jenkins/Jenkinsfile
@@ -61,7 +61,7 @@ node('container') {
           sh(script: '''#!/bin/bash
             if [ "$DOCKER_RECORDING_VERSION" != "default" ]; then
               echo "Using custom openvidu-recording tag: $DOCKER_RECORDING_VERSION"
-              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.recording.version=$DOCKER_RECORDING_VERSION -Dopenvidu.webhook=true -Dopenvidu.webhook.endpoint=http://172.17.0.1:7777/webhook/ openvidu-server-*.jar &> /openvidu-server.log &
+              cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.recording.version=$DOCKER_RECORDING_VERSION -Dopenvidu.webhook=true -Dopenvidu.webhook.endpoint=http://localhost:7777/webhook/ openvidu-server-*.jar &> /openvidu-server.log &
             else
               echo "Using default openvidu-recording tag"
               cd openvidu/openvidu-server/target && java -jar -Dopenvidu.publicurl=https://172.17.0.1:4443/ -Dopenvidu.recording=true -Dopenvidu.webhook=true -Dopenvidu.webhook.endpoint=http://localhost:7777/webhook/ openvidu-server-*.jar &> /openvidu-server.log &
