--- a/openvidu-browser/package.json
+++ b/openvidu-browser/package.json
@@ -1,7 +1,7 @@
 {
     "author": "OpenVidu",
     "dependencies": {
-        "@types/node": "12.12.6",
+        "@types/node": "12.12.14",
         "@types/platform": "1.3.2",
         "freeice": "2.2.2",
         "hark": "1.2.3",
@@ -11,7 +11,6 @@
     },
     "description": "OpenVidu Browser",
     "devDependencies": {
-        "autoprefixer": "9.7.1",
         "browserify": "16.5.0",
         "grunt": "1.0.4",
         "grunt-cli": "1.3.2",
@@ -24,9 +23,9 @@
         "grunt-ts": "6.0.0-beta.22",
         "tsify": "4.0.1",
         "tslint": "5.20.1",
-        "typedoc": "0.15.0",
+        "typedoc": "0.15.3",
         "typescript": "3.7.2",
-        "uglify-js": "3.6.8"
+        "uglify-js": "3.7.1"
     },
     "license": "Apache-2.0",
     "main": "lib/index.js",
@@ -39,8 +38,7 @@
         "browserify": "VERSION=${VERSION:-}; cd src && ../node_modules/browserify/bin/cmd.js Main.ts -p [ tsify ] --exclude kurento-browser-extensions --debug -o ../static/js/openvidu-browser-$VERSION.js -v",
         "browserify-prod": "VERSION=${VERSION:-}; cd src && ../node_modules/browserify/bin/cmd.js --debug Main.ts -p [ tsify ] --exclude kurento-browser-extensions | ../node_modules/uglify-js/bin/uglifyjs --source-map content=inline --output ../static/js/openvidu-browser-$VERSION.min.js",
         "build": "cd src/OpenVidu && ./../../node_modules/typescript/bin/tsc && cd ../.. && ./node_modules/typescript/bin/tsc --declaration src/index.ts --outDir ./lib --sourceMap --lib dom,es5,es2015.promise,scripthost",
-        "docs": "./node_modules/typedoc/bin/typedoc --options ./config/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io/api/openvidu-browser/* && cp -R ./docs/. ../../openvidu.io/api/openvidu-browser",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "docs": "./node_modules/typedoc/bin/typedoc --options ./config/typedoc.js --out ./docs ./src && rm -rf ../../openvidu.io/api/openvidu-browser/* && cp -R ./docs/. ../../openvidu.io/api/openvidu-browser"
     },
     "types": "lib/index.d.ts",
     "version": "2.11.0"
